[gd_scene load_steps=9 format=2]

[ext_resource path="res://Characters/Character.gd" type="Script" id=1]
[ext_resource path="res://Characters/Collision Detection/Hurtbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Characters/Stats.tscn" type="PackedScene" id=3]
[ext_resource path="res://Default Classes/FiniteStateMachine.tscn" type="PackedScene" id=5]
[ext_resource path="res://Sound/SFX/Combat/Hits/impact3.wav" type="AudioStream" id=6]
[ext_resource path="res://Characters/CharacterStateMachine.gd" type="Script" id=7]
[ext_resource path="res://Characters/Effects/StatePopup.tscn" type="PackedScene" id=8]

[sub_resource type="Animation" id=2]
resource_name = "Staggered"
length = 0.15
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0.0, -5.0, 5.0 ]
}

[node name="Character" type="KinematicBody2D"]
collision_layer = 0
script = ExtResource( 1 )

[node name="Traits" type="Node2D" parent="."]

[node name="FiniteStateMachine" parent="Traits" instance=ExtResource( 5 )]
script = ExtResource( 7 )

[node name="Stats" parent="Traits" instance=ExtResource( 3 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Staggered = SubResource( 2 )

[node name="Shadow" type="Sprite" parent="."]
light_mask = 4

[node name="Sprite" type="Sprite" parent="."]
light_mask = 4
hframes = 8

[node name="StatePopup" parent="." instance=ExtResource( 8 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="Collision" type="Node2D" parent="."]

[node name="Hurtbox" parent="Collision" instance=ExtResource( 2 )]

[node name="SFX" type="Node" parent="."]

[node name="Hurt" type="AudioStreamPlayer" parent="SFX"]

[node name="Death" type="AudioStreamPlayer" parent="SFX"]

[node name="Idle" type="AudioStreamPlayer" parent="SFX"]

[node name="HurtHit" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 6 )
volume_db = -3.0

[connection signal="area_entered" from="Collision/Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="invincibility_ended" from="Collision/Hurtbox" to="." method="_on_Hurtbox_invincibility_ended"]
[connection signal="invincibility_started" from="Collision/Hurtbox" to="." method="_on_Hurtbox_invincibility_started"]

[editable path="Collision/Hurtbox"]
